--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,6 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.69"
 byteorder = "1.4.3"
+lazy-regex = "2.4.1"
+serde = { version = "1.0.152", features = ["derive"] }
+serde_json = "1.0.93"
