--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ anyhow = "1.0.69"
 byteorder = "1.4.3"
 lazy-regex = "2.4.1"
 lazy_static = "1.4.0"
+progress = "0.2.0"
 regex = "1.7.1"
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.93"
