--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,14 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.69"
 byteorder = "1.4.3"
+fs_extra = "1.3.0"
+home = "0.5.4"
 lazy-regex = "2.4.1"
 lazy_static = "1.4.0"
 progress = "0.2.0"
 regex = "1.7.1"
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.93"
+
+[build-dependencies]
+fs_extra = "1.3.0"
